--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,8 +22,8 @@
     color: white;
     transition: .5s;
     opacity: 0;
-    animation: sliderTop .3s ease forwards;
-    animation-delay: calc(0.2s*var(--i));
+    animation: sliderTop 1s ease forwards;
+    animation-delay: 2s;
 }
 
 .active {
